[fix] adjust auth modal tab alignment

--- a/glancy-site/src/components/AuthModal.css
+++ b/glancy-site/src/components/AuthModal.css
@@ -24,6 +24,7 @@
 
 .auth-tabs {
   display: flex;
+  width: 100%;
   margin-bottom: 1rem;
 }
 
@@ -35,6 +36,7 @@
   cursor: pointer;
   border-bottom: 2px solid transparent;
   color: inherit;
+  text-align: center;
 }
 
 .auth-tabs button.active {
